--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js",
+    "start": "nodemon src/index.js",
     "test": "node testing/index.js"
   },
   "keywords": [],
@@ -20,10 +19,10 @@
     "multer": "^2.0.1",
     "node-xlsx": "^0.24.0",
     "nodemailer": "^7.0.3",
+    "nodemon": "^3.1.10",
     "pdf-text-reader": "^5.1.0"
   },
   "devDependencies": {
-    "axios": "^1.10.0",
-    "nodemon": "^3.1.10"
+    "axios": "^1.10.0"
   }
 }
