--- a/mcp/Javascript/package.json
+++ b/mcp/Javascript/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.17.0",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.18.2"
+    "@modelcontextprotocol/sdk": "^1.18.2",
+    "zod": "^4.1.11"
   }
 }
